[package]
name = "rand-rect"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
]
