[package]
name = "pop-pad3"
version = "0.1.0"
edition = "2021"

[dependencies]
[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_UI_Controls_Dialogs",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
]
[build-dependencies]
windres = "0.2.2"
