[package]
name = "rnd-rct-mt"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
windows-result = "0.2"
windows-strings = "0.1.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Media_Multimedia",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
]